syntax = "proto3";

package proto;

message User {
  string name = 1;
  uint32  age = 2;
  string birthday = 3;
  string address = 4;
  string email = 5;
}

message Work {
  string company = 1;
  string address = 2;
  string email = 3;
  string code = 4;
  string ipa_time = 5;
}

message User_Work {
  string name = 1;
  uint32  age = 2;
  string birthday = 3;
  string address = 4;
  string email = 5;
  Work work = 6;
}

message PutOne {
  repeated User users = 1;
  repeated Work works = 2;
}

message PutTwo {
  repeated User_Work uws = 1;
}